2010-11-24  Satish Sampath  <satish@chromium.org>

        Reviewed by Steve Block.

        Remove API migration code which is no longer used.
        https://bugs.webkit.org/show_bug.cgi?id=50013

        * public/WebSpeechInputControllerMock.h:

2010-11-23  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r72628.
        http://trac.webkit.org/changeset/72628
        https://bugs.webkit.org/show_bug.cgi?id=49994

        This patch is causing layout-test failtures on GTK Linux
        64-bit Debug (Requested by ctguil on #webkit).

        * public/WebAccessibilityObject.h:
        * src/WebAccessibilityObject.cpp:
        (WebKit::WebAccessibilityObject::parentObject):

2010-11-23  Chris Guillory  <chris.guillory@google.com>

        Reviewed by Dimitri Glazkov.

        Include the FrameView widget of a RenderWidget in the accessibility tree.
        https://bugs.webkit.org/show_bug.cgi?id=49106

        * public/WebAccessibilityObject.h:
        * src/WebAccessibilityObject.cpp:
        (WebKit::WebAccessibilityObject::equals):
        (WebKit::WebAccessibilityObject::parentObject):

2010-11-23  John Knottenbelt  <jknotten@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] Introduce wrapper types for WebCore::GeolocationError, WebCore::GeolocationPosition.
        https://bugs.webkit.org/show_bug.cgi?id=49735

        Introduce WebKit API types so that the browser implementation can feed
        position and error updates to the WebCore::GeolocationController.

        * WebKit.gyp:
        * public/WebGeolocationError.h: Added.
        (WebKit::WebGeolocationError::WebGeolocationError):
        (WebKit::WebGeolocationError::~WebGeolocationError):
        * public/WebGeolocationPosition.h: Added.
        (WebKit::WebGeolocationPosition::WebGeolocationPosition):
        (WebKit::WebGeolocationPosition::~WebGeolocationPosition):
        * src/WebGeolocationError.cpp: Added.